test/fail_compilation/fail7524a.d
/*
REQUIRED_ARGS: -o-
TEST_OUTPUT:
----
fail_compilation/fail7524a.d(9): Error: #line integer ["filespec"]\n expected
----
*/

#line 47 __DATE__
